--- a/.env.example
+++ b/.env.example
@@ -7,4 +7,8 @@ POSTGRES_PORT=5433
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=password
 POSTGRES_DB=mydb
-POSTGRES_HOST=localhost
+POSTGRES_HOST=postgres
+
+PGADMIN_DEFAULT_EMAIL=pgadmin4@pgadmin.org
+PGADMIN_DEFAULT_PASSWORD=admin
+
